refactor: update counter effects and mana value handling in various spells
- create new effects, PlayEffect, CounterEffect, DrawCardEffect, MillCardsEffect

- update CreateTokenEffect to allow runtime token creation to work iwht dynamic values

- update SeekCardEffect to use FilterTyped and deprecate old filterCard method

- update DiscoverEffect to use a dynamic value

- update CardCriteria to accept multiple names

- update FilterTyped match method to be generic

- add more StaticTypedFilters

- update drawCards method to accept a Cards object to save cards that were drawn

- create RememberedTargets pointer for saving cards/players as targets for linked effects

- create TargetGeneric to allow targeting with FilterTyped